--- a/index.html
+++ b/index.html
@@ -124,11 +124,10 @@
             📊 Curvas experimentales-MJ
         </button>
 
-        <h3>Recursos</h3>
-        <p style="font-size: 0.8rem; color: #666; font-style: italic;">
-            (Sube tus archivos PDF o CSV a GitHub para activarlos aquí)
-        </p>
-        <a href="#" class="link-descarga" onclick="alert('Debes subir el archivo manual.pdf a GitHub primero')">📄 Descargar Manual (PDF)</a>
+        <button class="btn-simulador" onclick="cargarSimulador(this, 'https://graficador-perfilometro-mj.streamlit.app/?embed=true')">
+            📈 Visualizador Perfilómetro-MJ
+        </button>
+
     </div>
 
     <div class="main-area">
