--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
             📈 Visualizador Perfilómetro-MJ
         </button>
 
+        <button class="btn-simulador" onclick="cargarSimulador(this, 'https://rta-curvas-mj.streamlit.app/?embed=true')">
+            📉 Analizador Curvas R/T-MJ
+        </button>
+
     </div>
 
     <div class="main-area">
