--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
             📉 Analizador Curvas R/T-MJ
         </button>
 
+        <button class="btn-simulador" onclick="cargarSimulador(this, 'https://suavizador-curvas-mj.streamlit.app/?embed=true')">
+            🧪 Suavizador de Curvas-MJ
+        </button>
+
     </div>
 
     <div class="main-area">
