--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h1>Bienvenido al Laboratorio</h1>
             <p>
                 Simulador de curvas experimentales realizado por <strong>Ing. Moisés Suárez</strong> 
-                en colaboración con el <strong>Dr. Christhoper Rosiles</strong>.
+                en colaboración con <strong>Lab. Superficies e Interfaces del IER-UNAM</strong>.
             </p>
             <p style="margin-top: 30px; font-size: 0.9rem; color: #666;">
                 👈 Selecciona el simulador en el menú para iniciar.
@@ -170,3 +170,4 @@
 
 </body>
 </html>
+
